apps/nas/filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: nas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: filebrowser
        image: filebrowser/filebrowser:v2.30.0
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: filebrowser-media
          mountPath: /srv
        resources:
          requests:
            memory: "64Mi"
            cpu: "10m"
          limits:
            memory: "256Mi"
            cpu: "200m"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: filebrowser-config
      - name: filebrowser-media
        persistentVolumeClaim:
          claimName: filebrowser-media
      - name: scripts
        configMap:
          name: filebrowser-scripts
          defaultMode: 0755
